--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,6 @@
 
     body {
-        display: flex;
+        display: block;
         align-items: center;
         justify-content: center;
         height: 100vh;
