--- a/css/style2.css
+++ b/css/style2.css
@@ -20,6 +20,7 @@ body {
     width: 60px;
     height: 60px;
     text-align: center;
+    line-height: 60px;
     font-size: 24px;
     text-transform: uppercase;
     border: 2px solid #000;
@@ -35,4 +36,19 @@ body {
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.correct {
+    background-color: green !important; 
+    color: white; 
+}
+
+.misplaced {
+    background-color: yellow !important; 
+    color: black;
+}
+
+.wrong {
+    background-color: gray !important;
+    color: white;
 }
