--- a/css/style2.css
+++ b/css/style2.css
@@ -33,8 +33,8 @@ body {
 }
 
 #playAgain {
-    padding: 10px;
-    font-size: 16px;
+    margin-top: 0.3vh;
+    font-size: 1rem;
     cursor: pointer;
 }
 
