--- a/css/style2.css
+++ b/css/style2.css
@@ -52,3 +52,71 @@ body {
     background-color: gray !important;
     color: white;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100vh;
+    background: whitesmoke;
+    font-size: 1.5rem;
+}
+
+.Keyboard {
+    height: 50vh;
+    width: 70vw;
+    background: darkgray;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 1rem;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px; 
+    margin-top: 0.25vh;
+    margin-bottom: 0.25vh;
+}
+
+.key {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    min-width: 3rem; 
+    background: lightgray; 
+    border: 2px solid black;  
+    border-radius: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.key:active {
+    background: white;
+}
+
+.key[capslock], .key.enter {
+    flex-grow: 1; 
+    text-align: center;
+}
+
+.space-row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.space{
+    margin-top: 0.5vh;
+        width: 40%;
+        height: 2rem;
+        background: grey;
+    }
+
+button{
+    margin-bottom: 0.6vh;
+}
