--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 32px; /* Make the letter bigger */
+    font-size: 32px; 
     text-transform: uppercase;
     border: 1px solid #000;
     background-color: #ccc;
