--- a/css/style2.css
+++ b/css/style2.css
@@ -24,7 +24,7 @@ body {
     font-size: 24px;
     text-transform: uppercase;
     border: 2px solid #000;
-    background-color: white; /* Hvit bakgrunn som default */
+    background-color: white; 
 }
 
 #melding {
